melhoria documentação, registo na base de dados
